discord-frontend/hartex-discord-commands-test/tests/ui/expected_equal1.stderr
error: expected `=`
  --> tests/ui/expected_equal1.rs:25:1
   |
25 | #[metadata(command_type)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ in this procedural macro expansion
   |
  ::: $WORKSPACE/hartex-discord-commands-macros/src/lib.rs
   |
   | pub fn metadata(tokens: TokenStream, item: TokenStream) -> TokenStream {
   | ---------------------------------------------------------------------- in this expansion of `#[metadata]`
